[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/chapters/first/backgrounds/close/Close.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/chapters/first/backgrounds/far/Far.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/EnemySpawnSystem.gd" type="Script" id=3]
[ext_resource path="res://scenes/chapters/first/characters/main/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/swipe-detector/swipe_detector.gd" type="Script" id=5]
[ext_resource path="res://scripts/behaviors/PlayerBehavior.gd" type="Script" id=6]
[ext_resource path="res://scripts/LevelCommonBehaviour.gd" type="Script" id=7]
[ext_resource path="res://scenes/screens/ui/GameUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/screens/game-over/GameOver.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/behaviors/GameOverScreen.gd" type="Script" id=10]
[ext_resource path="res://scripts/behaviors/TimerBehavior.gd" type="Script" id=11]

[node name="Base" type="Node2D"]
script = ExtResource( 7 )

[node name="SwipeDetector" type="Node" parent="."]
script = ExtResource( 5 )
directions_mode = "Four Directions"

[node name="Backgrounds" type="Node2D" parent="."]

[node name="Far" parent="Backgrounds" instance=ExtResource( 2 )]

[node name="Close" parent="Backgrounds" instance=ExtResource( 1 )]

[node name="EnemyController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="SpawnLSTSystem" type="Position2D" parent="EnemyController"]
position = Vector2( 2160, 600 )

[node name="SpawnRSTSystem" type="Position2D" parent="EnemyController"]
position = Vector2( -240, 600 )

[node name="SpawnLTSSystem" type="Position2D" parent="EnemyController"]
position = Vector2( 2160, 720 )

[node name="SpawnRTSSystem" type="Position2D" parent="EnemyController"]
position = Vector2( -240, 720 )

[node name="SpawnLBSSystem" type="Position2D" parent="EnemyController"]
position = Vector2( 2160, 840 )

[node name="SpawnRBSSystem" type="Position2D" parent="EnemyController"]
position = Vector2( -240, 840 )

[node name="SpawnLSDSystem" type="Position2D" parent="EnemyController"]
position = Vector2( 2160, 960 )

[node name="SpawnRSDSystem" type="Position2D" parent="EnemyController"]
position = Vector2( -240, 960 )

[node name="RewardController" type="Node2D" parent="."]
z_index = 2

[node name="SpawnLSTSystem" type="Position2D" parent="RewardController"]
position = Vector2( 2160, 600 )

[node name="SpawnRSTSystem" type="Position2D" parent="RewardController"]
position = Vector2( -240, 600 )

[node name="SpawnLTSSystem" type="Position2D" parent="RewardController"]
position = Vector2( 2160, 720 )

[node name="SpawnRTSSystem" type="Position2D" parent="RewardController"]
position = Vector2( -240, 720 )

[node name="SpawnLBSSystem" type="Position2D" parent="RewardController"]
position = Vector2( 2160, 840 )

[node name="SpawnRBSSystem" type="Position2D" parent="RewardController"]
position = Vector2( -240, 840 )

[node name="SpawnLSDSystem" type="Position2D" parent="RewardController"]
position = Vector2( 2160, 960 )

[node name="SpawnRSDSystem" type="Position2D" parent="RewardController"]
position = Vector2( -240, 960 )

[node name="PlayerController" type="Node2D" parent="."]

[node name="TopLimit" type="Position2D" parent="PlayerController"]
position = Vector2( 600, 600 )

[node name="BottomLimit" type="Position2D" parent="PlayerController"]
position = Vector2( 600, 960 )

[node name="Player" parent="PlayerController" instance=ExtResource( 4 )]
position = Vector2( 600, 600 )
script = ExtResource( 6 )
speed = 600

[node name="GameUI" parent="." instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 240.0

[node name="GameOver" parent="." instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 10 )

[node name="DistanceScoreTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true
script = ExtResource( 11 )
label = "distance_score"

[node name="SidewalkEnemySpawnTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 11 )
label = "sidewalk_enemy_spawn"

[node name="StreetEnemySpawnTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 11 )
label = "street_enemy_spawn"
[connection signal="swiped" from="SwipeDetector" to="PlayerController/Player" method="_on_SwipeDetector_swiped"]
[connection signal="timeout" from="DistanceScoreTimer" to="PlayerController/Player" method="_on_DistanceScoreTimer_timeout"]
[connection signal="timeout" from="SidewalkEnemySpawnTimer" to="EnemyController" method="_on_SidewalkEnemySpawnTimer_timeout"]
[connection signal="timeout" from="StreetEnemySpawnTimer" to="EnemyController" method="_on_StreetEnemySpawnTimer_timeout"]
